--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
             </div>
         </div>
         <div class="nav-right login-and-user">
-            <a href="#">Sign Up</a>
-            <a href="#">Log In</a>
+            <a href="#" class="login-signup">Sign Up</a>
+            <a href="#" class="login-signup">Log In</a>
             <a href="#" class="nav-user">
-                <img src="/img/User-modified.png" alt="User">
+                <img src="/img/User.png" alt="User">
             </a>
         </div>
     </nav>
@@ -32,16 +32,48 @@
     <header>
         <div class="header-text">
             <h1>Learn How To Drum!</h1>
-            <p>With How To Drum.</p>
+            <p>With <span>How To Drum</span></p>
         </div>
     </header>
 
     <main>
-        <section class="">
-
+        <section class="drum-components-section">
+            <div class="section-title">
+                <h1>DRUM COMPONENTS</h1>
+            </div>
+            <div class="component-card-container">
+                <div class="component-card snare-card">
+                    <img src="/img/drum-component/snare.png" alt="Snare">
+                    <div class="component-card-description snare-card-description">
+                        <h2>Snare</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo perspiciatis voluptatum ab, laudantium quibusdam quisquam 
+                        minus ipsum vel omnis nostrum magnam impedit nesciunt odio! Modi laborum reiciendis facere numquam autem.</p>
+                    </div>
+                </div>
+                <div class="component-card floor-tom-card">
+                    <img src="img/drum-component/floor-tom.png" alt="Floor Tom">
+                    <div class="component-card-description floor-tom-card-description">
+                        <h2>Floor Tom</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo perspiciatis voluptatum ab, laudantium quibusdam quisquam minus ipsum vel omnis nostrum magnam impedit nesciunt odio! Modi laborum reiciendis facere numquam autem.</p>
+                    </div>
+                </div>
+                <div class="component-card floor-tom-card">
+                    <img src="img/drum-component/floor-tom.png" alt="Floor Tom">
+                    <div class="component-card-description floor-tom-card-description">
+                        <h2>Floor Tom</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo perspiciatis voluptatum ab, laudantium quibusdam quisquam minus ipsum vel omnis nostrum magnam impedit nesciunt odio! Modi laborum reiciendis facere numquam autem.</p>
+                    </div>
+                </div>
+                <div class="component-card floor-tom-card">
+                    <img src="img/drum-component/floor-tom.png" alt="Floor Tom">
+                    <div class="component-card-description floor-tom-card-description">
+                        <h2>Floor Tom</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo perspiciatis voluptatum ab, laudantium quibusdam quisquam minus ipsum vel omnis nostrum magnam impedit nesciunt odio! Modi laborum reiciendis facere numquam autem.</p>
+                    </div>
+                </div>
+            </div>
         </section>
         <section class="">
-
         </section>
     </main>
 </body>
