--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
                 <img src="img/Logo HowToDrum.png" alt="Logo">
             </a>
             <div class="nav-items">
-                <a href="#">Tutorials</a>
-                <a href="#">Basic</a>
-                <a href="#">Advance</a>
-                <a href="#">Feedback</a>
+                <a href="index.html">Drum Parts</a>
+                <a href="songs.html">Songs</a>
+                <a href="#">Brands</a>
+                <a href="#">About</a>
             </div>
         </div>
         <div class="nav-right login-and-user">
