--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/png" class="tab-logo" href="Logo HowToDrum - BG Removed.png">
-    <title>HowToDrum</title>
+    <link rel="icon" type="image/png" class="tab-logo" href="img/Logo HowToDrum.png">
+    <title>Home - HowToDrum</title>
 </head>
 <body>
     <nav>
         <div class="nav-left logo-and-items">
-            <a href="#" class="nav-logo">
+            <a href="index.html" class="nav-logo">
                 <img src="img/Logo HowToDrum.png" alt="Logo">
             </a>
             <div class="nav-items">
                 <a href="index.html">Drum Parts</a>
                 <a href="songs.html">Songs</a>
                 <a href="#">Brands</a>
-                <a href="#">About</a>
+                <a href="about.html">About</a>
             </div>
         </div>
         <div class="nav-right login-and-user">
@@ -46,35 +46,74 @@
                     <img src="/img/drum-component/snare.png" alt="Snare">
                     <div class="component-card-description snare-card-description">
                         <h2>Snare</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo perspiciatis voluptatum ab, laudantium quibusdam quisquam 
-                        minus ipsum vel omnis nostrum magnam impedit nesciunt odio! Modi laborum reiciendis facere numquam autem.</p>
+                        <p>Snare, biasanya berukuran lebar 13" hingga 14" dan terbuat dari logam atau kayu, menghasilkan suara yang tajam dan tajam karena snare logam di bawah kepala drum.</p>
+                    </div>
+                </div>
+                <div class="component-card high-tom-card">
+                    <img src="img/drum-component/high-tom.jpg" alt="High Tom">
+                    <div class="component-card-description floor-tom-card-description">
+                        <h2>High Tom (Tom 1)</h2>
+                        <p>High Tom / Tom 1, tom lebih kecil dengan diameter mulai dari 10" hingga 12", menghasilkan nada cerah dan bernada tinggi</p>
+                    </div>
+                </div>
+                <div class="component-card low-tom-card">
+                    <img src="img/drum-component/low-tom.jpg" alt="Low Tom">
+                    <div class="component-card-description floor-tom-card-description">
+                        <h2>Low Tom (Tom 2)</h2>
+                        <p>Low Tom / Tom 2, tom lebih besar sekitar 13", menghasilkan nada yang lebih penuh dan lebih dalam.</p>
                     </div>
                 </div>
                 <div class="component-card floor-tom-card">
                     <img src="img/drum-component/floor-tom.png" alt="Floor Tom">
                     <div class="component-card-description floor-tom-card-description">
                         <h2>Floor Tom</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo perspiciatis voluptatum ab, laudantium quibusdam quisquam minus ipsum vel omnis nostrum magnam impedit nesciunt odio! Modi laborum reiciendis facere numquam autem.</p>
+                        <p>Floor tom, drum yang lebih besar yang diletakkan di lantai dengan kaki, berukuran antara 14" hingga 18" dan menghasilkan nada resonansi yang lebih dalam.</p>
                     </div>
                 </div>
-                <div class="component-card floor-tom-card">
-                    <img src="img/drum-component/floor-tom.png" alt="Floor Tom">
+                <div class="component-card bass-drum-card">
+                    <img src="img/drum-component/bass-drum.jpg" alt="Bass Drum">
                     <div class="component-card-description floor-tom-card-description">
-                        <h2>Floor Tom</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo perspiciatis voluptatum ab, laudantium quibusdam quisquam minus ipsum vel omnis nostrum magnam impedit nesciunt odio! Modi laborum reiciendis facere numquam autem.</p>
+                        <h2>Bass Drum</h2>
+                        <p>Bass drum, terbuat dari kayu dengan kepala drum plastik, berdiameter 18" hingga 24" dan menghasilkan bunyi yang dalam dan rendah.</p>
                     </div>
                 </div>
-                <div class="component-card floor-tom-card">
-                    <img src="img/drum-component/floor-tom.png" alt="Floor Tom">
+                <div class="component-card hi-hat-card">
+                    <img src="img/drum-component/hihat.jpg" alt="HiHat">
                     <div class="component-card-description floor-tom-card-description">
-                        <h2>Floor Tom</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo perspiciatis voluptatum ab, laudantium quibusdam quisquam minus ipsum vel omnis nostrum magnam impedit nesciunt odio! Modi laborum reiciendis facere numquam autem.</p>
+                        <h2>Hi-Hat</h2>
+                        <p>Hi-hat, terdiri dari dua simbal (atas & bawah) yang dipasang pada dudukannya, memberikan suara yang tajam saat ditutup dan nada terang dan bergemerincing saat dimainkan terbuka.</p>
+                    </div>
+                </div>
+                <div class="component-card crash-card">
+                    <img src="img/drum-component/crash.jpg" alt="Crash">
+                    <div class="component-card-description floor-tom-card-description">
+                        <h2>Crash</h2>
+                        <p>Crash cymbal, biasanya berukuran 16" hingga 18", menghasilkan suara yang keras dan eksplosif yang digunakan untuk aksen.</p>
+                    </div>
+                </div><div class="component-card ride-card">
+                    <img src="img/drum-component/ride.jpg" alt="Ride">
+                    <div class="component-card-description floor-tom-card-description">
+                        <h2>Ride</h2>
+                        <p>Ride cymbal, biasanya berukuran 20" hingga 22", menghasilkan suara "ting" yang stabil dan berkelanjutan yang sering digunakan untuk pola ritme.
+                        </p>
                     </div>
                 </div>
             </div>
         </section>
-        <section class="">
-        </section>
     </main>
+
+    <footer>
+        <div class="footer-top">
+            <a href="#" class="nav-logo">
+                <img src="img/Logo HowToDrum.png" alt="Logo">
+            </a>
+            <h3>HowToDrum</h3>
+        </div>
+        <hr class="footer-separator">
+        <div class="footer-bottom">
+            <p style="font-size: 1.2rem;"><i>A Drum Cheatsheet.</i></p>
+            <p style="font-size: 0.8rem">Copyright &#169 2024 HowToDrum</p>
+        </div>
+    </footer>
 </body>
 </html>
