Change directory address

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <a href="#" class="login-signup">Sign Up</a>
             <a href="#" class="login-signup">Log In</a>
             <a href="#" class="nav-user">
-                <img src="/img/User.png" alt="User">
+                <img src="img/User.png" alt="User">
             </a>
         </div>
     </nav>
@@ -43,7 +43,7 @@
             </div>
             <div class="component-card-container">
                 <div class="component-card snare-card">
-                    <img src="/img/drum-component/snare.png" alt="Snare">
+                    <img src="img/drum-component/snare.png" alt="Snare">
                     <div class="component-card-description snare-card-description">
                         <h2>Snare</h2>
                         <p>Snare, biasanya berukuran lebar 13" hingga 14" dan terbuat dari logam atau kayu, menghasilkan suara yang tajam dan tajam karena snare logam di bawah kepala drum.</p>
