Change directory address

--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
             <a href="#" class="login-signup">Sign Up</a>
             <a href="#" class="login-signup">Log In</a>
             <a href="#" class="nav-user">
-                <img src="/img/User.png" alt="User">
+                <img src="img/User.png" alt="User">
             </a>
         </div>
     </nav>
@@ -43,13 +43,13 @@
         </div>
         <div class="socials-container">
             <a href="https://tiktok.com">
-                <img class="socials-img tiktok-img" src="/img/socials/tiktok.png" alt="TikTok">
+                <img class="socials-img tiktok-img" src="img/socials/tiktok.png" alt="TikTok">
             </a>
             <a href="https://instagram.com">
-                <img class="socials-img tiktok-img" src="/img/socials/instagram.png" alt="Instagram">                </a>
+                <img class="socials-img tiktok-img" src="img/socials/instagram.png" alt="Instagram">                </a>
             </a>
             <a href="https://wa.me/6281225865919">
-                <img class="socials-img tiktok-img" src="/img/socials/whatsapp.png" alt="Whatsapp">
+                <img class="socials-img tiktok-img" src="img/socials/whatsapp.png" alt="Whatsapp">
             </a>
         </div>
     </main>
