--- a/about.html
+++ b/about.html
@@ -42,13 +42,13 @@
             <p>HowToDrum adalah situs web yang dirancang sesederhana mungkin untuk menyediakan dasar-dasar bermain drum. Situs ini memberikan informasi yang jelas mengenai teknik, ritme, dan pola drum, serta tips berguna untuk meningkatkan keterampilan bermain drum.</p>
         </div>
         <div class="socials-container">
-            <a href="https://tiktok.com">
+            <a href="https://tiktok.com" target="_blank">
                 <img class="socials-img tiktok-img" src="/img/socials/tiktok.png" alt="TikTok">
             </a>
-            <a href="https://instagram.com">
+            <a href="https://instagram.com" target="_blank">
                 <img class="socials-img tiktok-img" src="/img/socials/instagram.png" alt="Instagram">                </a>
             </a>
-            <a href="https://wa.me/6281225865919">
+            <a href="https://wa.me/6281225865919" target="_blank">
                 <img class="socials-img tiktok-img" src="/img/socials/whatsapp.png" alt="Whatsapp">
             </a>
         </div>
